--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "framer-motion": "^4.1.10",
     "immer": "^9.0.1",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
